パンくずリスト実装

--- a/html/common/css/breadcrumb.css
+++ b/html/common/css/breadcrumb.css
@@ -1,26 +1,7 @@
 @charset "utf-8";
 
 .breadcrumb{
-
-}
-
-.breadcrumb ul{
-
-}
-
-.breadcrumb ul li{
-  display: inline-block;
-}
-
-.breadcrumb ul li a{
-  color: #b9d400;
-  position: relative;
-  display: inline-block;
-  padding-right: 25px;
-}
-
-.breadcrumb ul li a:after{
-  content: "／";
-  position: absolute;
-  right: 0;
+	max-width: 1040px;
+	margin: 0 auto;
+	background-color: #ffffff;
 }
