--- a/html/common/css/mainVisual.css
+++ b/html/common/css/mainVisual.css
@@ -2,8 +2,13 @@
 
 .mainVisual{
 	text-align: center;
-	padding: 35px 0;
+	padding: 85px 0 35px;
 	background-color: rgba(184, 212, 0, 0.2);
+
+	background-image:url("../img/clover.svg");
+	background-size:50px 50px;
+	background-repeat: no-repeat;
+	background-position: center 35px;
 }
 
 .mainVisual h2{
